# pydatomic

./: .gitignore  LICENSE.md  README.md  build_doc.sh  getversion.py  module.html.jinja2  pydatomic.md  pydatomic_test.py  pyproject.toml  tag.sh
doc/: installation.md  introduction.md
pydatomic/: __init__.py  builtin.py  core.py  facts.py  util.py
